# secure-mailbox

./: .env.example  .gitignore  README.md  check_owner.py  cover-document.md  requirements.txt
backend/: database.py  dependencies.py  main.py  models.py  schemas.py
backend/blockchain/: _send_lock.py  contract.py  receipts.py  registry.py
backend/crypto/: __init__.py  aead.py  hpke.py  kdf.py  password.py
backend/routers/: __init__.py  auth.py  files.py  messages.py  users.py
blockchain/: hardhat.config.js  package-lock.json  package.json
blockchain/artifacts/contracts/KeyRegistry.sol/: KeyRegistry.json
blockchain/artifacts/contracts/MessageDigest.sol/: MessageDigest.json
blockchain/artifacts/contracts/MessageReceipt.sol/: MessageReceipt.json
blockchain/contracts/: KeyRegistry.sol  MessageDigest.sol  MessageReceipt.sol
blockchain/scripts/: deploy-registry.js  deploy.js  post-receipt.js  preflight.js  register-key.js  revoke-key.js  rotate-key.js  seed-registry-dev.js
blockchain/test/: KeyRegistry.test.js  MessageDigest.test.js  MessageReceipt.test.js
cpp-client/: CMakeLists.txt  README.md
cpp-client/include/: Chain.hpp  Client.hpp  Crypto.hpp  File.hpp  FileStore.hpp  Keccak.hpp  KeyVault.hpp  Message.hpp  MessageStore.hpp  PinStore.hpp  User.hpp
cpp-client/src/: Chain.cpp  Client.cpp  Crypto.cpp  FileStore.cpp  Keccak.cpp  KeyVault.cpp  Message.cpp  MessageStore.cpp  PinStore.cpp  User.cpp  main.cpp
docs/: ai-log.md  cover-document.docx  crypto-design.docx  crypto-design.md  deployment.md  network-architecture.docx  network-architecture.md  pentest-report.docx  pentest-report.md  test-plan.md
docs/ai-artefacts/: ai-reflection.docx  reflection.md
tests/: conftest.py  test_auth.py  test_blockchain_integration.py  test_crypto_aad.py  test_crypto_e2e.py  test_file_access.py  test_files_api.py  test_message_access.py  test_nonce_allocator.py  test_username_validation.py
web-client/: chat.html  files.html  index.html  verify-key.html  verify.html
web-client/css/: style.css
web-client/js/: auth.js  chain.js  chat.js  config.js  crypto.js  files.js  keccak.js  lucide-icons.js  verify-key.js  verify.js
